поправил UserDto, методы getPublishedEvents и findEventsByAdmin